--- a/madcoffeego/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/madcoffeego/app/src/main/res/layout/fragment_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/splash_screen_background"
-    tools:context=".SplashScreenFragment">
+    tools:context=".view.splash_screen.SplashScreenFragment">
 
     <ImageView
         android:id="@+id/logo"
