--- a/madcoffeego/app/src/main/res/navigation/nav_graf.xml
+++ b/madcoffeego/app/src/main/res/navigation/nav_graf.xml
@@ -3,11 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graf"
-    app:startDestination="@id/splashScreenFragment">
+    app:startDestination="@id/onboardingFragment">
 
     <fragment
         android:id="@+id/splashScreenFragment"
-        android:name="com.breaktime.madcoffeego.SplashScreenFragment"
+        android:name="com.breaktime.madcoffeego.view.splash_screen.SplashScreenFragment"
         android:label="fragment_splash_screen"
-        tools:layout="@layout/fragment_splash_screen" />
+        tools:layout="@layout/fragment_splash_screen" >
+        <action
+            android:id="@+id/action_splashScreenFragment_to_onboardingFragment"
+            app:destination="@id/onboardingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/onboardingFragment"
+        android:name="com.breaktime.madcoffeego.view.onboarding.OnboardingFragment"
+        android:label="fragment_onboarding"
+        tools:layout="@layout/fragment_onboarding" >
+        <action
+            android:id="@+id/action_onboardingFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.breaktime.madcoffeego.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" />
 </navigation>
