--- a/madcoffeego/app/src/main/res/navigation/nav_graf.xml
+++ b/madcoffeego/app/src/main/res/navigation/nav_graf.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graf"
-    app:startDestination="@id/splashScreenFragment">
+    app:startDestination="@id/homeFragment">
 
     <fragment
         android:id="@+id/splashScreenFragment"
@@ -28,7 +28,7 @@
     </fragment>
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.breaktime.madcoffeego.HomeFragment"
+        android:name="com.breaktime.madcoffeego.view.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
